--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=android123
 sonar.projectVersion=1.0
   
 sonar.sources=src/main/java
-sonar.java.binaries=target/classes
+# sonar.java.binaries=target/classes
   
 # java version used by source files:
 sonar.java.source=1.6
